--- a/01html/01tag/css/style.css
+++ b/01html/01tag/css/style.css
@@ -8,7 +8,6 @@ body{
 .container{
     width: 1280px;
     margin: 0 auto;
-
 }
 
 .logo{
@@ -51,8 +50,6 @@ body{
     font-weight: bold;
 }
 
-
-
 .hd{
     box-shadow: 0 0 rgba(0,0,0,0.3);
     background-color: white;
@@ -78,10 +75,38 @@ body{
     color:white;
 }
 
-.visual{
+.visual {
     height: 100vh;
     min-height: 600px;
-    margin-bottom: 50px;
+    margin: 0 auto 50px;
+    margin-bottom: 50px; /* Duplicate, only one margin-bottom needed */
+}
+
+.visual .item{
+    height: 100vh;
+    background-color: skyblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.visual .item.st1{
+    background-image: url(../pageImages/banner01.jpg);
+}
+
+.visual .item.st2{
+    background-image: url(../pageImages/banner02.jpg);
+}
+
+.visual .item.st3{
+    background-image: url(../pageImages/banner04.jpg);
+}
+
+.visual .item .textWrap{
+    width:auto;
+    padding-left: 20px;
+    color: white;
 }
 
 .top{
@@ -117,16 +142,16 @@ body{
 }
 
 .banner .card .card-text{
-    padding: 20px 16px 0;
+    padding: 20px 10px 0;
 }
 
 .banner .card .card-text h4{
-    margin-bottom: 10px;
     display: inline-block;
     padding-right: 28px;
     font-size: 21px;
     font-weight: 700;
     line-height: 1.52;
+    padding-bottom: 10px;
 }
 
 .banner .card .card-text p{
@@ -138,6 +163,8 @@ body{
 
 .textWrap01 .container01{
     padding-bottom: 20px;
+    width: 1280px;
+    margin: 0 auto;
 }
 
 .textWrap01 .container01 .title{
@@ -148,17 +175,22 @@ body{
     text-indent: -2px;
     width: 100%;
     color: #1e1e1e;
+    padding-bottom: 20px;
+    /* background-color: rebeccapurple; */
 }
 
 .textWrap01 .container01 .subTitle{
-    padding-left: 624px;
+    padding-left: 760px;
     font-size: 18px;
     line-height: 1.56;    
     font-weight: 300;
-    /* width: 100%; */
     color: #1e1e1e;
-    /* justify-content: flex-end;
-    align-items: end; */
+    /* background-color: #00f; */
+}
+
+.textWrap01 .container01 .title .realTitle{
+    position: relative;
+    padding-bottom: 20px;
 }
 
 .textWrap01 .container01 .title .realTitle::after{
@@ -171,8 +203,16 @@ body{
     background-color: #ffd44a;
 }
 
+.purposeWrap{
+    width: 1280px;
+    margin: 0 auto;
+    position: relative;
+    height: 462px;
+    margin-top: 160px;
+    margin-bottom: 50px;
+}
 
-.textBox{
+.purposeWrap .textBox{
     width: 1114px;
     height: 338px;
     padding: 102px 520px 102px 104px;
@@ -195,12 +235,6 @@ body{
     unicode-bidi: isolate;
 }
 
-.purposeWrap{
-    position: relative;
-    height: 462px;
-    margin-top: 160px;
-}
-
 .textBox em{
     display: block;
     margin-top: 24px;
@@ -211,10 +245,43 @@ body{
 }
 
 .imgPurpose img{
-    position: relative;
+    position: absolute;
     top: 102px;
     right: 0;
     width: 592px;
     height: 360px;
 }
+
+.newsWrap{
+    padding-top: 160px;
+    padding-bottom: 160px;
+    background-color: rgb(226, 226, 226);
+}
+
+.newsWrap .news{
+    position: relative;
+}
+
+.newsWrap .news .subArea{
+    padding-bottom: 20px;
+    width: 1280px;
+}
+
+.newsWrap .news .subArea .title{
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 1.41;
+    letter-spacing: -2px;
+    text-indent: -2px;
+}
+.newsWrap .news .subArea .title::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 70px;
+    height: 5px;
+    background-color: #ffd44a;
+}
+
 
