--- a/01html/01tag/css/style.css
+++ b/01html/01tag/css/style.css
@@ -70,7 +70,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 15px; /*원은 15px or 50%*/
+    border-radius: 15px;
     background: #00f;
     color:white;
 }
@@ -106,22 +106,21 @@ body{
 .visual .item .textWrap {
     /* background-color: aqua; */
     width: 1280px;
-    padding-left: 20px; /* 기존 값 유지 */
+    padding-left: 20px;
     color: white;
-    text-align: start; /* 텍스트 중앙 정렬 */
-    position: relative; /* 위치 조정을 위해 상대 위치 설정 */
-    top: 50%; /* 부모 요소의 절반 아래로 이동 */
-    transform: translateY(-250%); /* 텍스트를 수직 중앙에 오도록 조정 */
+    text-align: start; 
+    position: relative; 
+    top: 50%; 
+    transform: translateY(-250%); 
 }
 
 .visual .item .textWrap .title {
-    font-size: 5em; /* 타이틀 크기 조정 */
-    margin-bottom: 10px; /* 하단 마진 추가 */
+    font-size: 5em; 
+    margin-bottom: 10px;
 }
 
 .visual .item .textWrap .subt {
-    font-size: 1.5em; /* 서브 타이틀 크기 조정 */
-}
+    font-size: 1.5em; 
 
 .visaul .item .textWrap .title::after{
     content: "";
